# neuroforge-nexus

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nexus_mock_server.py  nexus_pi_validator.py  pyproject.toml  requirements.txt  super_pi.py
.github/workflows/: notify-super-pi.yml
config/: default.yaml
results/: nexus_test_report.json
scripts/: benchmark.py  generate_synthetic_data.py  validate.py
src/neuroforge/: __init__.py  __version__.py
src/neuroforge/ai/: predix_omnimind.py
src/neuroforge/api/: main.py  models.py
src/neuroforge/api/routes/: ai.py  health.py  network.py  neural.py  quantum.py
src/neuroforge/core/: constants.py  neural_encoder.py  signal_processor.py
src/neuroforge/network/: teleforge_network.py
src/neuroforge/quantum/: quantum_encryption.py  quantum_optimizer.py
src/neuroforge/simulation/: brain_simulator.py
tests/: test_ai_engine.py  test_brain_simulator.py  test_signal_processor.py
