[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuroforge-nexus"
version = "0.1.0"
description = "NeuroForge Nexus — Pinnacle BCI Ecosystem: Neural Signal Processing, AI Cognition Engine, Quantum Optimization, and Neural Mesh Networking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "NeuroForge Nexus Team", email = "nexus@neuroforge.ai" }]
keywords = ["bci", "brain-computer-interface", "neurotechnology", "neural-signal-processing", "ai", "quantum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "mne>=1.6.0",
    "asyncio-mqtt>=0.16.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
quantum = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "pennylane>=0.35.0",
]

[project.scripts]
neuroforge = "neuroforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/neuroforge --cov-report=term-missing"
